# cppTango

./: .clang-format  .clang-tidy  .gitattributes  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  INSTALL.md  README.md  RELEASE_NOTES.md  appveyor.yml  sonar-project.properties  tango.pc.cmake
configure/: CMakeLists.txt  cmake_linux.cmake  cmake_pch_linux.cmake  cmake_pch_win.cmake  cmake_win.cmake  cmake_win_defs.cmake  cpack_linux.cmake  cpack_win.cmake  tangoConfig.cmake.in  test_cppzmq_features.cpp  test_zmq_version.cpp
cpp_test_suite/cpp_test_ds/: CMakeLists.txt  DevTest.cpp  DevTest.h  DevTestClass.cpp  DevTestClass.h  FileDb.cpp  IOAddAttribute.cpp  IOAddAttribute.h  IOArray1.cpp  IOArray1.h  IOArray2.cpp  IOArray2.h  IOMisc.cpp  IOMisc.h  IOSeqVec.cpp  IOSeqVec.h  IOSetAttr.cpp  IOSetAttr.h  IOStr1.cpp  IOStr1.h  IOStr2.cpp  IOStr2.h  IOStrArray.cpp  IOStrArray.h  IOStruct.cpp  IOStruct.h  SigThrow.cpp  SigThrow.h  TypeCmds.cpp  TypeCmds.h  classfactory.cpp  main.cpp  main_win.cpp
cpp_test_suite/cpp_test_ds/fwd_ds/: CMakeLists.txt  ClassFactory.cpp  FwdTest.cpp  FwdTest.h  FwdTestClass.cpp  FwdTestClass.h  FwdTestStateMachine.cpp  main.cpp
cppapi/client/: ApiUtil.h  AttributeProxy.h  CMakeLists.txt  Connection.h  Database.h  DbDevice.h  DeviceAttribute.h  DeviceData.h  DevicePipe.h  DeviceProxy.h  accessproxy.cpp  accessproxy.h  api_util.cpp  api_util.tpp  apiexcept.cpp  apiexcept.h  asynreq.cpp  attr_proxy.cpp  cbthread.cpp  cbthread.h  dbapi.h  dbapi_attribute.cpp  dbapi_base.cpp  dbapi_cache.cpp  dbapi_class.cpp  dbapi_datum.cpp  dbapi_device.cpp  dbapi_history.cpp  dbapi_server.cpp  dbapi_serverdata.cpp  devapi.h  devapi_attr.cpp  devapi_attr.tpp  devapi_attr_tmpl.h  devapi_base.cpp  devapi_data.cpp  devapi_datahist.cpp  devapi_pipe.cpp  devapi_pipe.tpp  devapi_pipe_tmpl.h  (+22 more)
cppapi/client/helpers/: CMakeLists.txt  DeviceProxyHelper.h  PogoHelper.h  TangoExceptionsHelper.h  Xstring.h
cppapi/include/tango/client/: ApiUtil.h  AttributeProxy.h  CMakeLists.txt  Connection.h  DeviceAttribute.h  DeviceProxy.h  accessproxy.h  (+12 more)
cppapi/server/: CMakeLists.txt  README  attrdesc.cpp  attrdesc.h  attrgetsetprop.cpp  attribute.cpp  attribute.h  attribute.tpp  attribute_spec.tpp  attribute_spec_tmpl.h  attribute_tmpl.h  attrmanip.cpp  attrmanip.h  attrprop.h  attrprop.tpp  attrprop_tmpl.h  attrsetval.cpp  attrsetval.tpp  attrsetval_tmpl.h  auto_tango_monitor.cpp  auto_tango_monitor.h  basiccommand.cpp  basiccommand.h  blackbox.cpp  blackbox.h  class_factory.cpp  classattribute.cpp  classattribute.h  classpipe.cpp  classpipe.h  command.cpp  command.h  coutappender.cpp  coutappender.h  coutbuf.cpp  coutbuf.h  dev_event.cpp  dev_poll.cpp  device.cpp  device.h  (+121 more)
cppapi/server/idl/: CMakeLists.txt
cppapi/server/jpeg_mmx/: CMakeLists.txt
log4tango/: AUTHORS  CMakeLists.txt  README
log4tango/config/: config.cmake  config.h.in
log4tango/include/log4tango/: Appender.h  Appender.hh  AppenderAttachable.h  AppenderAttachable.hh  CMakeLists.txt  FileAppender.h  FileAppender.hh  Filter.h  Filter.hh  Layout.h  Layout.hh  LayoutAppender.h  LayoutAppender.hh  Level.h  Level.hh  LogSeparator.h  LogSeparator.hh  LogStreambuf.h  LogStreambuf.hh  Logger.h  Logger.hh  LoggerStream.h  LoggerStream.hh  LoggingEvent.h  LoggingEvent.hh  OstreamAppender.h  OstreamAppender.hh  PatternLayout.h  PatternLayout.hh  Portability.h  Portability.hh  RollingFileAppender.h  RollingFileAppender.hh  XmlLayout.h  XmlLayout.hh  config-win32.h
log4tango/src/: Appender.cpp  AppenderAttachable.cpp  CMakeLists.txt  DummyThreads.cpp  FileAppender.cpp  Filter.cpp  Layout.cpp  LayoutAppender.cpp  Level.cpp  LogSeparator.cpp  LogStreambuf.cpp  Logger.cpp  LoggerStream.cpp  LoggingEvent.cpp  OstreamAppender.cpp  PatternLayout.cpp  RollingFileAppender.cpp  StringUtil.cpp  StringUtil.h  StringUtil.hh  XmlLayout.cpp
log4tango/tests/: CMakeLists.txt  clock.cpp  test_bench.cpp  test_log4tango.cpp
tests/: CMakeLists.txt  ConfEventBugClient.cpp  acc_right.cpp  add_rem_attr.cpp  add_rem_dev.cpp  allowed_cmd.cpp  archive_event.cpp  asyn_attr.cpp  asyn_attr_cb.cpp  asyn_attr_multi.cpp  asyn_cb.cpp  asyn_cb2.cpp  asyn_cb_cmd.cpp  asyn_cmd.cpp  asyn_faf.cpp  asyn_thread.cpp  asyn_write_attr.cpp  asyn_write_attr_multi.cpp  asyn_write_cb.cpp  att_conf.cpp  att_conf_event.cpp  att_conf_event_buffer.cpp  att_type_event.cpp  attr_conf_test.cpp  attr_manip.cpp  attr_misc.cpp  attr_proxy.cpp  attr_types.cpp  auto_asyn_cmd.cpp  back_ch_event.cpp  back_per_event.cpp  change_event.cpp  change_event64.cpp  change_event_buffer.cpp  cmd_types.cpp  common.cpp  common.h  compare_test.cpp  conf_devtest.cpp  copy_devproxy.cpp  (+61 more)
tests/asyn/: asyn_cb.cpp  asyn_faf.cpp  asyn_thread.cpp
tests/cxxtest/: CMakeLists.txt
tests/cxxtest/include/: config.h.cmake
tests/device_server/: CMakeLists.txt
tests/device_server/forward/: CMakeLists.txt  ClassFactory.cpp  DServerImpl.h  FwdTest.cpp  FwdTest.h  FwdTestClass.cpp  FwdTestClass.h  FwdTestStateMachine.cpp  main.cpp
tests/device_server/generic/: CMakeLists.txt  DServerImpl.h  DevTest.cpp  DevTest.h  DevTestClass.cpp  DevTestClass.h  FileDb.cpp  IOAddAttribute.cpp  IOAddAttribute.h  IOArray1.h  IOArray2.h  IOMisc.h  IOSeqVec.h  IOSetAttr.h  IOStr1.h  IOStr2.h  IOStrArray.h  IOStruct.h  SigThrow.cpp  SigThrow.h  TypeCmds.h  classfactory.cpp  main.cpp  main_win.cpp
tests/environment/: run_with_fixture.sh.cmake  setup_database.sh.cmake  setup_devices.sh.cmake  start_server.sh.cmake  tango_admin.sh.cmake
tests/event/: archive_event.cpp  att_conf_event.cpp  change_event_buffer.cpp  multi_dev_event.cpp  multi_event.cpp  per_event.cpp  pipe_event.cpp
tests/new_tests/: compare_test.cpp  cxx_attr_write.cpp  cxx_common.h  cxx_group.cpp  cxx_jpeg_encoding.cpp.in  cxx_misc.cpp  cxx_test_state_on.cpp
tests/old_tests/: ConfEventBugClient.cpp  add_rem_attr.cpp  add_rem_dev.cpp  attr_proxy.cpp  cmd_types.cpp  helper.cpp  lock.cpp  locked_device.cpp  new_devproxy.cpp  reconnect_attr.cpp  ring_depth.cpp  write_attr.cpp
tests/resources/: peppers_decoded.data  peppers_gray.data
(+304 files in other folders)
